[gd_scene load_steps=6 format=2]

[ext_resource path="res://Font/unispace bd.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Font/font_theme.tres" type="Theme" id=2]
[ext_resource path="res://Images/blank.png" type="Texture" id=3]
[ext_resource path="res://Scenes/levelSelector.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 1 )

[node name="levelSelector" type="Node2D"]
script = ExtResource( 4 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -100

[node name="bgImg" type="TextureRect" parent="CanvasLayer"]
modulate = Color( 0.74902, 0.74902, 0.74902, 1 )
margin_right = 1288.0
margin_bottom = 736.0
mouse_filter = 2
texture = ExtResource( 3 )
expand = true

[node name="Label" type="Label" parent="CanvasLayer"]
modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -126.0
margin_top = 24.0
margin_right = 126.0
margin_bottom = 61.0
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 1 )
text = "Level Selector"

[node name="button layout" type="CanvasLayer" parent="."]

[node name="stackTutBtn" type="Button" parent="button layout"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 192.0
margin_top = -216.0
margin_right = 392.0
margin_bottom = -166.0
theme = ExtResource( 2 )
text = "Stack Tutorial"

[node name="stackLevelBtn" type="Button" parent="button layout"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 768.0
margin_top = -216.0
margin_right = 968.0
margin_bottom = -166.0
theme = ExtResource( 2 )
text = "Stack Level"

[node name="graphTutBtn" type="Button" parent="button layout"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 192.0
margin_top = -24.0
margin_right = 392.0
margin_bottom = 26.0
theme = ExtResource( 2 )
text = "Graph Tutorial"

[node name="graphLevelBtn" type="Button" parent="button layout"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 768.0
margin_top = -8.0
margin_right = 968.0
margin_bottom = 42.0
theme = ExtResource( 2 )
text = "Graph Level"

[connection signal="button_up" from="button layout/stackTutBtn" to="." method="_on_stackTutBtn_button_up"]
[connection signal="button_up" from="button layout/stackLevelBtn" to="." method="_on_stackLevelBtn_button_up"]
[connection signal="button_up" from="button layout/graphLevelBtn" to="." method="_on_graphLevelBtn_button_up"]
